dashboard alignment fixes

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -1,18 +1,17 @@
 @import "./themes/variables.css";
 
-html {
-    height: 100%;
-}
-body {
-    min-height: 100%;
-}
+
 * {
     box-sizing: border-box;
 }
 
-body {
+html, body {
+    height: 100%;
     margin: 0;
     padding: 0;
+}
+
+body {
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     background-image: var(--primary-background);
     background-repeat: no-repeat;
